# SCGMS-Build-Environments

./: README.md
ESP32/: CMakeLists.txt  sdkconfig
ESP32/components/filters/: CMakeLists.txt
ESP32/components/scgms_embedded/: CMakeLists.txt
ESP32/main/: CMakeLists.txt  main.c
RpiZeroW/: CMakeLists.txt  make.sh  start.sh
RpiZeroW/sources/: FreeRTOSConfig.h  main.c
RpiZeroW/sources/FreeRTOS/: tasks.c
RpiZeroW/sources/FreeRTOS-POSIX/FreeRTOS-Plus-POSIX/include/portable/Rpi/: atomic.c  atomic.h  static_alloc.c
RpiZeroW/sources/FreeRTOS-POSIX/include/FreeRTOS_POSIX/: errno.c  errno.h
RpiZeroW/sources/FreeRTOS/Source/include/: portable.h
RpiZeroW/sources/FreeRTOS/freertos/: FreeRTOS.h  FreeRTOSConfig.h  task.h
RpiZeroW/sources/FreeRTOS/portable/GCC/RaspberryPi/: port.c  portmacro.h
RpiZeroW/sources/Rpi/: raspberrypi.ld  startup.s  uart_print.c  uart_print.h
Wasm_emcc/: CMakeLists.txt  main.cpp  make.sh
Wasm_wamr/: CMakeLists.txt  binarydump  main.cpp  make.sh  wasi_toolchain.cmake
